# mamaduck

./: .coverage  .gitignore  README.md  data.csv  duckdb  m.db  movies  my.db  new.db  output.db  pyproject.toml  sample_database_v2.sqlite  sample_database_v2.sqlite:Zone.Identifier
connectors/: csv.py  sqlite.py
mamaduck/: kwak.py  quack.py
mamaduck/connectors/: csv.py  psql.py  sqlite.py
mamaduck/database/: duckdb.py
mamaduck/portal/: main.py
mamaduck/portal/static/css/: style.css
mamaduck/portal/templates/: create_database.html  export_database.html  index.html  load_data.html
mamaduck/sink/: to_csv.py  to_psql.py  to_sqlite.py
tests/: test_connectors.py  test_sinks.py
