[tool.poetry]
name = "mamaduck"
version = "0.1.0"
description = ""
authors = ["thelaycon <tobitobitobiwhy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
dbt-core = "^1.8.9"
duckdb = "^1.1.3"
tornado = "^6.4.2"
colorama = "^0.4.6"
pandas = "^2.2.3"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
python_files = "test_*.py"
python_functions = "test_*"
